# cstring

./: .gitattributes  .gitignore  AUTHORS.md  CHANGES.txt  CMakeLists.txt  FAQ.md  HISTORY.md  INSTALL.md  LICENSE  NEWS.md  README.md  TODO.md  build_cmake.sh  clean_cmake.sh  cstring.vc10.sln  ctest_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_unit_tests.sh
.github/workflows/: cmake-multi-platform.yml
.sis/: script_info_lines.txt
cmake/: BuildType.cmake  LanguageFullVersion.cmake  TargetMacros.cmake
examples/: CMakeLists.txt
include/cstring/: cstring.h  cstring.vector.h  implicit_link.h
include/cstring/implicit_link/: core.h  vector.h
include/cstring/internal/: safestr.h
include/cstring/internal/implicit_link/: base_.h
projects/cstring.core/vc10/: cstring.core.vcxproj  cstring.core.vcxproj.filters
projects/vcprops/: cstring.common.props  cstring.example.props  cstring.test.Catch.props  cstring.test.common.props  cstring.test.scratch.props  cstring.test.xTests.props
src/: CMakeLists.txt  cstring.core.c  cstring.def  cstring.vector.c  dllmain.c
test/: CMakeLists.txt
test/component/: CMakeLists.txt
test/component/test.component.cstring_readline/: CMakeLists.txt  implicit_link.cpp  test.component.cstring_readline.cpp
test/component/test.component.cstring_readline/vc10/: test.component.cstring_readline.vcxproj  test.component.cstring_readline.vcxproj.filters
test/component/test.component.cstring_writeline/: CMakeLists.txt  implicit_link.cpp  test.component.cstring_writeline.cpp
test/component/test.component.cstring_writeline/vc10/: test.component.cstring_writeline.vcxproj  test.component.cstring_writeline.vcxproj.filters
test/scratch/: CMakeLists.txt
test/scratch/libver/: CMakeLists.txt  main.cpp
test/scratch/test.scratch.HGLOBAL_on_x64/: CMakeLists.txt  implicit_link.cpp  test.scratch.HGLOBAL_on_x64.cpp
test/scratch/test.scratch.HGLOBAL_on_x64/vc10/: test.scratch.HGLOBAL_on_x64.vcxproj  test.scratch.HGLOBAL_on_x64.vcxproj.filters
test/scratch/test.scratch.auto_buffer/: CMakeLists.txt  implicit_link.c  test.scratch.auto_buffer.c
test/scratch/test.scratch.auto_buffer/vc10/: test.scratch.auto_buffer.vcxproj  test.scratch.auto_buffer.vcxproj.filters
test/scratch/test.scratch.cstring/: CMakeLists.txt  implicit_link.c  test.scratch.cstring.c
test/scratch/test.scratch.cstring.dynload/: implicit_link.c  test.scratch.cstring.dynload.cpp
test/scratch/test.scratch.cstring.dynload/vc10/: test.scratch.cstring.dynload.vcxproj  test.scratch.cstring.dynload.vcxproj.filters
test/scratch/test.scratch.cstring/vc10/: test.scratch.cstring.vcxproj  test.scratch.cstring.vcxproj.filters
test/scratch/test.scratch.cstring_create/: CMakeLists.txt  implicit_link.c  test.scratch.cstring_create.c
test/scratch/test.scratch.cstring_create/vc10/: test.scratch.cstring_create.vcxproj  test.scratch.cstring_create.vcxproj.filters
test/scratch/test.scratch.cstring_vector/: CMakeLists.txt  implicit_link.c  test.scratch.cstring_vector.c
test/scratch/test.scratch.cstring_vector/vc10/: test.scratch.cstring_vector.vcxproj  test.scratch.cstring_vector.vcxproj.filters
test/unit/: CMakeLists.txt
test/unit/test.unit.cstring.1/: CMakeLists.txt  implicit_link.cpp  test.unit.cstring.1.cpp
test/unit/test.unit.cstring.1/vc10/: test.unit.cstring.1.vcxproj  test.unit.cstring.1.vcxproj.filters
test/unit/test.unit.cstring.2/: CMakeLists.txt  implicit_link.cpp  test.unit.cstring.2.cpp
test/unit/test.unit.cstring.2/vc10/: test.unit.cstring.2.vcxproj  test.unit.cstring.2.vcxproj.filters
test/unit/test.unit.cstring.auto_buffer/: CMakeLists.txt  implicit_link.cpp  test.unit.cstring.auto_buffer.cpp
test/unit/test.unit.cstring.auto_buffer/vc10/: test.unit.cstring.auto_buffer.vcxproj  test.unit.cstring.auto_buffer.vcxproj.filters
test/unit/test.unit.cstring.cstring_getStatusCodeString/: CMakeLists.txt  implicit_link.cpp  test.unit.cstring.cstring_getStatusCodeString.cpp
test/unit/test.unit.cstring.cstring_getStatusCodeString/vc10/: test.unit.cstring.cstring_getStatusCodeString.vcxproj  test.unit.cstring.cstring_getStatusCodeString.vcxproj.filters
test/unit/test.unit.cstring.cstring_vector/: CMakeLists.txt  implicit_link.c  test.unit.cstring.cstring_vector.c
test/unit/test.unit.cstring.cstring_vector/vc10/: test.unit.cstring.cstring_vector.vcxproj  test.unit.cstring.cstring_vector.vcxproj.filters
