
add_subdirectory(test.scratch.auto_buffer)
add_subdirectory(test.scratch.cstring)
add_subdirectory(test.scratch.cstring_create)
add_subdirectory(test.scratch.cstring_vector)
add_subdirectory(test.scratch.cstring.dynload)
add_subdirectory(test.scratch.HGLOBAL_on_x64)


# ############################## end of file ############################# #

