
add_subdirectory(test.unit.cstring.1)
add_subdirectory(test.unit.cstring.2)
add_subdirectory(test.unit.cstring.auto_buffer)
add_subdirectory(test.unit.cstring.cstring_getStatusCodeString)
add_subdirectory(test.unit.cstring.cstring_vector)


# ############################## end of file ############################# #

